<resources>
    <string name="app_name">Flashcards</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="back">Back</string>
    <string name="front">Front</string>
    <string name="add">Add</string>
    <string name="add_flashcard_succes_message">Successfully add new flashcard</string>
    <string name="new_box_name">New box name</string>
    <string name="add_flascard_to_existing_box">Add flascard to existing box</string>
    <string name="box">Box</string>
    <string name="next">Next</string>
    <string name="box_name">Box name</string>
    <string name="empty_fields_message">Fill all fields: word and translation</string>
    <string name="type_new_word">Type new word</string>
    <string name="type_translation">Type translation</string>
    <string name="learn">Learn</string>
    <string name="edit">Edit</string>
    <string name="add_flashcards">Add flashcards</string>
    <string name="dialog_hint">Enter new box name</string>
    <string name="dialog_title">Add new box</string>
    <string name="welcome_string">There\'s nothing here right now.</string>
    <string name="finish_title">Congratulations!</string>
    <string name="finish_message">You have just finish learning flashcards from this box.</string>
    <string name="finish_session_message">You have just finish learning session. You can start another session or continue later</string>
    <string name="ok">ok</string>
    <string name="delete">delete</string>
    <string name="flashcard_delete">Flashcard successfully deleted</string>
    <string name="edit_flashcard">Succesfully edit flashcard</string>
    <string name="part0">Not started</string>
    <string name="part1">First round</string>
    <string name="part2">Second round</string>
    <string name="part3">Last round</string>
    <string name="part4">Learnt</string>
    <string name="box_deleted">Box deleted</string>
    <string name="continue_learning">Continue learning</string>
    <string name="click_here_to_start">Click here to start</string>
    <string name="box_statistics">Box statistics:</string>
</resources>
