<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="martakonik.flashcards.mainScreen.MainViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/app_name" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/tv_welcome"
            style="@style/Text.Flashcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/welcome_string"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibility_value="@{viewModel.messageVisible}" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/boarder_primary"
            android:onClick="@{viewModel::onAddClick}"
            android:text="@string/click_here_to_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
            app:visibility_value="@{viewModel.messageVisible}" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/flashcardBoxList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adapter="@{viewModel.adapter}"
            app:layoutManager="android.support.v7.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintVertical_bias="0.0"
            app:spanCount="2"
            app:visibility_value="@{viewModel.listVisible}" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:onClick="@{viewModel::onAddClick}"
            android:src="@drawable/ic_add_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:visibility_value="@{viewModel.floatingAddButtonVisible}" />

    </android.support.constraint.ConstraintLayout>
</layout>
